@@ -59,42 +59,83 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
     endif()
 endif()
 
-# Enable C++17 support in GCC >= 8.0.0
-# Enable C++14 support in 8.0.0 > GCC >= 6.1.1
-# Fallback to C++11 when using GCC < 6.1.1
+#### Set C++ standard
+set(CMAKE_CXX_EXTENSIONS OFF)
 
-if((CMAKE_CXX_COMPILER_ID STREQUAL "GNU") AND NOT WIN32)
-    if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "6.1.1")
-        set(MY_CXX_FLAGS "${MY_CXX_FLAGS} -std=c++11")
-    else()
-        if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "8.0.0")
-            set(MY_CXX_FLAGS "${MY_CXX_FLAGS} -std=c++14")
-        else()
-            set(MY_CXX_FLAGS "${MY_CXX_FLAGS} -std=c++17")
+# Check if we have std::filesystem
+if(POLICY CMP0075)
+    cmake_policy(SET CMP0075 NEW)
+endif()
+if(CMAKE_VERSION VERSION_LESS 3.8)
+    set(has_std_filesystem FALSE)
+else()
+    set(CMAKE_REQUIRED_FLAGS "-std=c++17")
+    if((CMAKE_CXX_COMPILER_ID STREQUAL "GNU") AND (CMAKE_CXX_COMPILER_VERSION VERSION_LESS "9.0.0"))
+        set(CMAKE_REQUIRED_LIBRARIES -lstdc++fs)
+    endif()
+    if(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
+        if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+            set(CMAKE_REQUIRED_LIBRARIES -lc++)
         endif()
     endif()
-    set(MY_CXX_FLAGS "${MY_CXX_FLAGS} -Wall -Wextra")  #Add warning flags: For "-Wall" see http://gcc.gnu.org/onlinedocs/gcc/Warning-Options.html
+    include(CheckCXXSymbolExists)
+    check_cxx_symbol_exists(std::filesystem::path::preferred_separator filesystem has_std_filesystem)
 endif()
 
-# Enable C++17 support in Clang >= 6.0.0
-# Enable C++14 support in 6.0.0 > Clang >= 3.5.0 or AppleClang >= 600
-# Fallback to C++11 if older version
+set(USE_CXX17 FALSE)
+if((CMAKE_CXX_COMPILER_ID STREQUAL "GNU") AND NOT WIN32)
+    if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "6.1.1")
+        set(CMAKE_CXX_STANDARD 11)
+    else()
+        if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "8.0.0")
+            set(CMAKE_CXX_STANDARD 14)
+        else()
+            if(${has_std_filesystem})
+                set(CMAKE_CXX_STANDARD 17)
+                set(CMAKE_CXX_STANDARD_REQUIRED ON)
+                set(USE_CXX17 TRUE)
+            else()
+                set(CMAKE_CXX_STANDARD 14)
+            endif()
+        endif()
+    endif()
+    set(MY_CXX_FLAGS "${MY_CXX_FLAGS} -Wall -Wextra")  # Add warning flags: For "-Wall" see http://gcc.gnu.org/onlinedocs/gcc/Warning-Options.html
+endif()
+
 if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-    if(CMAKE_SYSTEM_NAME MATCHES "Darwin")
+    if(CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
         # See https://trac.macports.org/wiki/XcodeVersionInfo for Apple Clang version equivalences
         if(CLANG_VERSION VERSION_LESS "600")
-            set(MY_CXX_FLAGS "${MY_CXX_FLAGS} -std=c++11")
+            set(CMAKE_CXX_STANDARD 11)
         else()
-            set(MY_CXX_FLAGS "${MY_CXX_FLAGS} -std=c++14")
+            if(CLANG_VERSION VERSION_LESS "1000")
+                set(CMAKE_CXX_STANDARD 14)
+            else()
+                if(${has_std_filesystem})
+                    set(CMAKE_CXX_STANDARD 17)
+                    set(CMAKE_CXX_STANDARD_REQUIRED ON)
+                    set(USE_CXX17 TRUE)
+                else()
+                    set(CMAKE_CXX_STANDARD 14)
+                endif()
+            endif()
         endif()
     else()
         if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "3.5.0")
-            set(MY_CXX_FLAGS "${MY_CXX_FLAGS} -std=c++11")
+            set(CMAKE_CXX_STANDARD 11)
         else()
             if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS "6.0.0")
-                set(MY_CXX_FLAGS "${MY_CXX_FLAGS} -std=c++14")
+                set(CMAKE_CXX_STANDARD 14)
             else()
-                set(MY_CXX_FLAGS "${MY_CXX_FLAGS} -std=c++17")
+                if(${has_std_filesystem})
+                    set(CMAKE_CXX_STANDARD 17)
+                    set(CMAKE_CXX_STANDARD_REQUIRED ON)
+                    if(NOT (${CMAKE_SYSTEM_NAME} MATCHES "Darwin") AND NOT WIN32)
+                        set(USE_CXX17 TRUE)
+                    endif()
+                else()
+                    set(CMAKE_CXX_STANDARD 14)
+                endif()
             endif()
         endif()
     endif()
@@ -110,21 +151,21 @@ endif()
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${MY_CXX_FLAGS} -Wall")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
 
-if(CMAKE_VERSION VERSION_GREATER "3.0")
+if(POLICY CMP0042)
     cmake_policy(SET CMP0042 NEW)
-    if(CMAKE_VERSION VERSION_GREATER "3.9")
-        cmake_policy(SET CMP0068 NEW)
-    endif()
+endif()
+if(POLICY CMP0068)
+    cmake_policy(SET CMP0068 NEW)
 endif()
 
 option(ENABLE_STRIP "Create a stripped volk_gnsssdr_profile binary (without shared libraries)" OFF)
 
-set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}) #allows this to be a sub-project
-set(PROJECT_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}) #allows this to be a sub-project
-list(INSERT CMAKE_MODULE_PATH 0 ${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules) #location for custom "Modules"
+set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}) # allows this to be a sub-project
+set(PROJECT_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}) # allows this to be a sub-project
+list(INSERT CMAKE_MODULE_PATH 0 ${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules) # location for custom "Modules"
 
 include(VolkBuildTypes)
-#select the release build type by default to get optimization flags
+# select the release build type by default to get optimization flags
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "Release")
     message(STATUS "Build type not specified: defaulting to release.")
@@ -136,7 +177,7 @@ message(STATUS "Build type set to ${CMAKE_BUILD_TYPE}.")
 set(VERSION_INFO_MAJOR_VERSION 0)
 set(VERSION_INFO_MINOR_VERSION 0)
 set(VERSION_INFO_MAINT_VERSION 10.git)
-include(VolkVersion) #setup version info
+include(VolkVersion) # setup version info
 
 
 
@@ -154,8 +195,8 @@ endif()
 set(CROSSCOMPILE_MULTILIB ${CROSSCOMPILE_MULTILIB} CACHE STRING "Define \"true\" if you have and want to use multiple C development libs installed for cross compile")
 
 if(MSVC)
-    add_definitions(-D_USE_MATH_DEFINES) #enables math constants on all supported versions of MSVC
-    add_compile_options(/W1) #reduce warnings
+    add_definitions(-D_USE_MATH_DEFINES) # enables math constants on all supported versions of MSVC
+    add_compile_options(/W1) # reduce warnings
     add_compile_options(/wo4309)
     add_compile_options(/wd4752)
     add_compile_options(/wo4273)
@@ -177,7 +218,7 @@ endif()
 ########################################################################
 
 # Python
-include(VolkPython) #sets PYTHON_EXECUTABLE and PYTHON_DASH_B
+include(VolkPython) # sets PYTHON_EXECUTABLE and PYTHON_DASH_B
 volk_python_check_module("python >= 2.7" sys "sys.version.split()[0] >= '2.7'" PYTHON_MIN_VER_FOUND)
 volk_python_check_module("mako >= 0.4.2" mako "mako.__version__ >= '0.4.2'" MAKO_FOUND)
 volk_python_check_module("six - python 2 and 3 compatibility library" six "True" SIX_FOUND)
@@ -204,20 +245,24 @@ if(MSVC)
     endif()
     set(BOOST_ALL_DYN_LINK "${BOOST_ALL_DYN_LINK}" CACHE BOOL "boost enable dynamic linking")
     if(BOOST_ALL_DYN_LINK)
-        add_definitions(-DBOOST_ALL_DYN_LINK) #setup boost auto-linking in msvc
+        add_definitions(-DBOOST_ALL_DYN_LINK) # setup boost auto-linking in msvc
     else()
-        unset(BOOST_REQUIRED_COMPONENTS) #empty components list for static link
+        unset(BOOST_REQUIRED_COMPONENTS) # empty components list for static link
+    endif()
+endif()
+if(${USE_CXX17})
+    set(Boost_LIBRARIES "")
+    set(Boost_INCLUDE_DIRS "")
+    set(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH})
+else()
+    include(VolkBoost)
+    if(NOT Boost_FOUND)
+        message(FATAL_ERROR "VOLK-GNSSSDR requires Boost to build")
     endif()
 endif()
 
-include(VolkBoost)
-
-if(NOT Boost_FOUND)
-    message(FATAL_ERROR "VOLK_GNSSSDR Requires boost to build")
-endif()
-
 # Orc
-option(ENABLE_ORC "Enable Orc" True)
+option(ENABLE_ORC "Enable Orc" TRUE)
 if(ENABLE_ORC)
   find_package(ORC)
 else()
@@ -246,7 +291,7 @@ endif()
 ########################################################################
 # Setup the package config file
 ########################################################################
-#set variables found in the pc.in file
+# set variables found in the pc.in file
 set(prefix ${CMAKE_INSTALL_PREFIX})
 set(exec_prefix "\${prefix}")
 set(libdir "\${exec_prefix}/lib${LIB_SUFFIX}")
@@ -332,7 +377,6 @@ if(NOT TARGET uninstall)
         ${CMAKE_COMMAND} -P ${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake
     )
 endif()
-
 
 
 
